--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: PP-PROD ab4c documentation
-email: asso@ppprod.org
+email: asso@pp-prod.org
 description: >- # this means to ignore newlines until "baseurl:"
   The purpose of the PPProd non profit association is the development of software applications,
   with the right of use to members.
