--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ twitter_username: __ppprod__
 github_username:  pp-prod
 
 # Build settings
-theme: leap-day
+#theme: leap-day
 remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
   - jekyll-feed
