--- a/_config.yml
+++ b/_config.yml
@@ -33,11 +33,11 @@ twitter_username: __ppprod__
 github_username:  pp-prod
 
 # Build settings
-#theme: leap-day
-remote_theme: pages-themes/leap-day@v0.2.0
+theme: minima
+#remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
+#  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
